More presentation contents

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -595,3 +595,21 @@ month = {09},
 title = {A Real-Time Variable-Q Non-Stationary Gabor Transform for Pitch Shifting},
 booktitle = {INTERSPEECH -- 16th Annual Conference of the International Speech Communication Association}
 }
+
+@misc{plumbley1,
+      title={Single Channel Audio Source Separation using Convolutional Denoising Autoencoders}, 
+      author={Emad M. Grais and Mark D. Plumbley},
+      year={2017},
+      eprint={1703.08019},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@misc{plumbley2,
+      title={Multi-Band Multi-Resolution Fully Convolutional Neural Networks for Singing Voice Separation}, 
+      author={Emad M. Grais and Fei Zhao and Mark D. Plumbley},
+      year={2019},
+      eprint={1910.09266},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
